--- a/package.json
+++ b/package.json
@@ -9,19 +9,34 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~51.0.28",
-    "expo-status-bar": "~1.12.1",
-    "nativewind": "^4.1.21",
-    "react": "18.2.0",
-    "react-native": "0.74.5",
-    "react-native-reanimated": "~3.10.1",
-    "react-native-safe-area-context": "4.10.5",
+    "@react-navigation/bottom-tabs": "^7.0.1",
+    "@react-navigation/drawer": "^7.0.1",
+    "@react-navigation/material-top-tabs": "^7.0.1",
+    "@react-navigation/native": "^7.0.0",
+    "@react-navigation/native-stack": "^7.0.0",
+    "@types/react-native-vector-icons": "^6.4.18",
+    "expo": "~52.0.4",
+    "expo-status-bar": "~2.0.0",
+    "nativewind": "^4.1.23",
+    "react": "18.3.1",
+    "react-native": "0.76.1",
+    "react-native-gesture-handler": "~2.20.2",
+    "react-native-pager-view": "^6.5.0",
+    "react-native-reanimated": "~3.16.1",
+    "react-native-safe-area-context": "4.14.0",
+    "react-native-screens": "4.0.0",
+    "react-native-tab-view": "^4.0.1",
+    "react-native-vector-icons": "^10.2.0",
     "tailwindcss": "^3.4.14"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
-    "@types/react": "~18.2.45",
-    "typescript": "^5.1.3"
+    "@babel/core": "^7.26.0",
+    "@types/react": "~18.3.12",
+    "typescript": "^5.6.3"
   },
-  "private": true
+  "private": true,
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
