--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "@types/react-native-vector-icons": "^6.4.18",
     "expo": "~52.0.8",
     "expo-status-bar": "~2.0.0",
+    "i18next": "^24.0.0",
     "nativewind": "^4.1.23",
     "react": "18.3.1",
+    "react-i18next": "^15.1.1",
     "react-native": "0.76.2",
     "react-native-reanimated": "^3.16.2",
     "react-native-safe-area-context": "^4.14.0",
