--- a/package.json
+++ b/package.json
@@ -17,20 +17,23 @@
     "@react-navigation/native-stack": "^7.1.0",
     "@types/react-native-vector-icons": "^6.4.18",
     "expo": "~52.0.8",
+    "expo-av": "~15.0.1",
+    "expo-linear-gradient": "~14.0.1",
     "expo-status-bar": "~2.0.0",
     "i18next": "^24.0.0",
+    "json-server": "^0.17.4",
+    "lucide-react-native": "^0.462.0",
     "nativewind": "^4.1.23",
     "react": "18.3.1",
     "react-i18next": "^15.1.1",
     "react-native": "0.76.2",
+    "react-native-element-dropdown": "^2.12.2",
     "react-native-reanimated": "^3.16.2",
     "react-native-safe-area-context": "^4.14.0",
     "react-native-screens": "~4.1.0",
     "react-native-vector-icons": "^10.2.0",
     "react-native-video": "^6.8.1",
-    "tailwindcss": "^3.4.15",
-    "expo-av": "~15.0.1",
-    "expo-linear-gradient": "~14.0.1"
+    "tailwindcss": "^3.4.15"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
