--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@ptomasroos/react-native-multi-slider": "^2.2.2",
+    "@react-native-community/slider": "^4.5.5",
     "@react-navigation/bottom-tabs": "^7.0.6",
     "@react-navigation/drawer": "^7.0.6",
     "@react-navigation/elements": "^2.1.0",
@@ -25,12 +27,15 @@
     "lucide-react-native": "^0.462.0",
     "nativewind": "^4.1.23",
     "react": "18.3.1",
+    "react-content-loader": "^7.0.2",
     "react-i18next": "^15.1.1",
     "react-native": "0.76.2",
+    "react-native-easy-content-loader": "^0.3.2",
     "react-native-element-dropdown": "^2.12.2",
     "react-native-reanimated": "^3.16.2",
     "react-native-safe-area-context": "^4.14.0",
     "react-native-screens": "~4.1.0",
+    "react-native-svg": "15.8.0",
     "react-native-vector-icons": "^10.2.0",
     "react-native-video": "^6.8.1",
     "tailwindcss": "^3.4.15"
