--- a/package.json
+++ b/package.json
@@ -17,9 +17,12 @@
     "@react-navigation/material-top-tabs": "^7.0.6",
     "@react-navigation/native": "^7.0.3",
     "@react-navigation/native-stack": "^7.1.0",
+    "@shopify/flash-list": "^1.7.2",
     "@types/react-native-vector-icons": "^6.4.18",
     "expo": "~52.0.8",
+    "expo-auth-session": "~6.0.1",
     "expo-av": "~15.0.1",
+    "expo-crypto": "~14.0.1",
     "expo-linear-gradient": "~14.0.1",
     "expo-status-bar": "~2.0.0",
     "i18next": "^24.0.0",
@@ -38,7 +41,8 @@
     "react-native-svg": "15.8.0",
     "react-native-vector-icons": "^10.2.0",
     "react-native-video": "^6.8.1",
-    "tailwindcss": "^3.4.15"
+    "tailwindcss": "^3.4.15",
+    "use-debounce": "^10.0.4"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
