--- a/package.json
+++ b/package.json
@@ -9,15 +9,21 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@ptomasroos/react-native-multi-slider": "^2.2.2",
+    "@react-native-community/slider": "^4.5.5",
     "@react-navigation/bottom-tabs": "^7.0.6",
     "@react-navigation/drawer": "^7.0.6",
     "@react-navigation/elements": "^2.1.0",
     "@react-navigation/material-top-tabs": "^7.0.6",
     "@react-navigation/native": "^7.0.3",
     "@react-navigation/native-stack": "^7.1.0",
+    "@shopify/flash-list": "^1.7.2",
+    "@types/bcryptjs": "^2.4.6",
     "@types/react-native-vector-icons": "^6.4.18",
     "expo": "~52.0.8",
+    "expo-auth-session": "~6.0.1",
     "expo-av": "~15.0.1",
+    "expo-crypto": "~14.0.1",
     "expo-linear-gradient": "~14.0.1",
     "expo-status-bar": "~2.0.0",
     "i18next": "^24.0.0",
@@ -25,15 +31,20 @@
     "lucide-react-native": "^0.462.0",
     "nativewind": "^4.1.23",
     "react": "18.3.1",
+    "react-content-loader": "^7.0.2",
     "react-i18next": "^15.1.1",
     "react-native": "0.76.2",
+    "react-native-easy-content-loader": "^0.3.2",
     "react-native-element-dropdown": "^2.12.2",
     "react-native-reanimated": "^3.16.2",
     "react-native-safe-area-context": "^4.14.0",
     "react-native-screens": "~4.1.0",
+    "react-native-svg": "15.8.0",
     "react-native-vector-icons": "^10.2.0",
     "react-native-video": "^6.8.1",
-    "tailwindcss": "^3.4.15"
+    "tailwindcss": "^3.4.15",
+    "use-debounce": "^10.0.4",
+    "yup": "^1.5.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
