--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "react-native-vector-icons": "^10.2.0",
     "react-native-video": "^6.8.1",
     "tailwindcss": "^3.4.15",
-    "use-debounce": "^10.0.4"
+    "use-debounce": "^10.0.4",
+    "yup": "^1.5.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
