--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "@react-navigation/material-top-tabs": "^7.0.6",
     "@react-navigation/native": "^7.0.3",
     "@react-navigation/native-stack": "^7.1.0",
+    "@reduxjs/toolkit": "^2.4.0",
     "@shopify/flash-list": "^1.7.2",
     "@types/react-native-vector-icons": "^6.4.18",
+    "axios": "^1.7.9",
     "expo": "~52.0.8",
     "expo-auth-session": "~6.0.1",
     "expo-av": "~15.0.1",
@@ -35,12 +37,15 @@
     "react-native": "0.76.2",
     "react-native-easy-content-loader": "^0.3.2",
     "react-native-element-dropdown": "^2.12.2",
+    "react-native-linear-gradient": "^2.8.3",
+    "react-native-paper": "^5.12.5",
     "react-native-reanimated": "^3.16.2",
     "react-native-safe-area-context": "^4.14.0",
     "react-native-screens": "~4.1.0",
     "react-native-svg": "15.8.0",
     "react-native-vector-icons": "^10.2.0",
     "react-native-video": "^6.8.1",
+    "react-redux": "^9.1.2",
     "tailwindcss": "^3.4.15",
     "use-debounce": "^10.0.4",
     "yup": "^1.5.0"
@@ -48,6 +53,7 @@
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/react": "~18.3.12",
+    "@types/react-redux": "^7.1.34",
     "typescript": "^5.3.3"
   },
   "private": true
